--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     # Rodar os comandos de deploy
     - name: Deploy on EC2
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@{{ secrets.EC2_IP }} << 'EOF'
+        ssh -o StrictHostKeyChecking=no ec2-user@{{ secrets.IP_EC2 }} << 'EOF'
           cd /home/ec2-user/api
           export MY_VARIABLE=${{ secrets.MY_VARIABLE }}
           docker-compose down
