--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Deploy na EC2
         run: |
-          ssh -i /path/to/your-key.pem ec2-user@{{ secrets.IP_EC2 }} 'docker-compose -f /path/to/your/docker-compose.yml up -d'
+          ssh -i /path/to/your-key.pem ec2-user@${{ secrets.IP_EC2 }} 'docker-compose -f /path/to/your/docker-compose.yml up -d'
