--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=${APP_PROFILE}
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY}
-jwt.issuerUri=http://${secrets.EC2_IP}:8080
+jwt.issuerUri=http://${secrets.IP_EC2}:8080
 
 # Open Api - Swagger
 springdoc.api-docs.path=/api/docs
