--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
+      - name: Build project
+        run: mvn clean package
+      
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v2
 
