--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       
       - name: Build project
         run: mvn clean package
+          ls -al ./target
       
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -56,4 +57,7 @@ jobs:
 
       - name: Deploy na EC2
         run: |
-          ssh -i /path/to/your-key.pem ec2-user@${{ secrets.IP_EC2 }} 'docker-compose -f /path/to/your/docker-compose.yml up -d'
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.IP_EC2 }} << 'EOF'
+            cd /home/ec2-user/api
+            docker-compose -f /home/ec2-user/api/docker-compose.yml up -d --build
+          EOF
