--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,11 +49,15 @@ jobs:
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Construir as imagens Docker
-        run: docker-compose -f docker-compose.yml build
+      # - name: Construir as imagens Docker
+      #   run: docker-compose -f docker-compose.yml build
 
       # - name: Subir containers Docker (Testar localmente)
       #   run: docker-compose -f docker-compose.yml up
+
+      #teste novo
+      - name: Subir containers Docker (teste)
+        run: docker-compose up -d
       
       - name: Tornar script executável
         run: chmod +x ./run-tests.sh
