--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,10 @@ jobs:
       - name: Construir as imagens Docker
         run: docker-compose -f docker-compose.yml build
 
+     # Derrubar container antes de subir nova instancia
+      - name: Derrubar containers Docker antes de subir novo
+        run: docker-compose down
+        
       # Subir os contêineres Docker em segundo plano
       - name: Subir containers Docker
         run: docker-compose -f docker-compose.yml up -d
