--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,5 +81,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.IP_EC2 }} << 'EOF'
             cd /home/ec2-user/api
+            docker-compose down
             docker-compose -f /home/ec2-user/api/docker-compose.yml up -d --build
           EOF
