--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,14 @@ jobs:
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-     # Construir as imagens Docker
+       # Construir as imagens Docker
       - name: Construir as imagens Docker
         run: docker-compose -f docker-compose.yml build
-        
+
+      # Derrubar container antes de subir nova instancia
+      - name: Derrubar containers Docker antes de subir novo
+        run: docker-compose down
+      
       # Subir os contêineres Docker em segundo plano
       - name: Subir containers Docker
         run: docker-compose -f docker-compose.yml up -d
