--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
           rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ec2-user@${{ secrets.IP_EC2 }}:/home/ec2-user/api
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.IP_EC2 }} "rm -rf /home/ec2-user/api/* && mkdir -p /home/ec2-user/api"
           rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ec2-user@${{ secrets.IP_EC2 }}:/home/ec2-user/api
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./target/maisPraTi-0.0.1-SNAPSHOT.jar ec2-user@${{ secrets.IP_EC2 }}:/home/ec2-user/api/api-erp.jar 
           
       - name: Deploy na EC2
         run: |
