--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,14 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       
       # # Definir variáveis de ambiente a partir dos GitHub Secrets
-      # - name: Set environment variables
-      #   run: |
-      #     echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
-      #     echo "APP_PROFILE=${{ secrets.APP_PROFILE }}" >> $GITHUB_ENV
-      #     echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> $GITHUB_ENV
-      #     echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> $GITHUB_ENV
-      #     echo "JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }}" >> $GITHUB_ENV
-      #     echo "JWT_EXPIRATION_RECOVERY=${{ secrets.JWT_EXPIRATION_RECOVERY }}" >> $GITHUB_ENV          
+      - name: Set environment variables
+        run: |
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
+          echo "APP_PROFILE=${{ secrets.APP_PROFILE }}" >> $GITHUB_ENV
+          echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> $GITHUB_ENV
+          echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> $GITHUB_ENV
+          echo "JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }}" >> $GITHUB_ENV
+          echo "JWT_EXPIRATION_RECOVERY=${{ secrets.JWT_EXPIRATION_RECOVERY }}" >> $GITHUB_ENV          
 
       # Configurar o JDK para o build
       - name: Set up JDK 21
