--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     networks:
       - minha-rede
     image: api-erp
+    env_file:
+      - ./.env
     deploy:
       resources:
         limits:
