--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://34.229.1.152:3306/bd_dev?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${secrets.IP_EC2}:3306/bd_dev?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl_auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.issuerUri=http://${secrets.IP_EC2}:8080
