--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+jwt.issuerUri=http://localhost:8080
