--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.application.name=api-erp
 spring.config.import=optional:env-file:.env
 
 # Define o perfil ativo da aplica??o
-spring.profiles.active=${APP_PROFILE}
+spring.profiles.active=test
+# spring.profiles.active=${APP_PROFILE}
 
 #Configura?oes do JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY}
-jwt.issuerUri=http://${secrets.IP_EC2}:8080
+#jwt.issuerUri=http://${secrets.IP_EC2}:8080
+
 
 # Open Api - Swagger
 springdoc.api-docs.path=/api/docs
