--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - minha-rede
     image: api-erp
     env_file:
-      - ./.env
+      - .env
     deploy:
       resources:
         limits:
