--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,9 +86,10 @@ jobs:
       - name: Debug .env creation
         run: |
           cat .env
-
+      
       - name: Clean up local .env file
-        run: rm .env
+        run: |
+          rm .env
         
       - name: Copiar arquivos para a EC2
         run: |
