--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=test
 #Configura?oes do JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
-jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY}
+jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY:90000}
 #jwt.issuerUri=http://${secrets.IP_EC2}:8080
 
 # Open Api - Swagger
