--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-jwt.issuerUri=http://localhost:8080
+jwt.issuerUri=http://34.227.59.55:8080
