--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,19 @@
 # Define a porta do servidor
 server.port=8080
-spring.application.name=api-erp
-spring.config.import=optional:env-file:.env
 
 # Define o perfil ativo da aplica??o
 spring.profiles.active=test
-# spring.profiles.active=${APP_PROFILE}
 
 #Configura?oes do JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
-jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY:90000}
-#jwt.issuerUri=http://${secrets.IP_EC2}:8080
+jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY}
+jwt.issuerUri=http://localhost:8080
 
 # Open Api - Swagger
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.operationsSorter=alpha
-springdoc.swagger-ui.enable=false
+springdoc.swagger-ui.enable=true
 springdoc.swagger-ui.path=/api/documentation.html
 springdoc.api-docs.version=OPENAPI_3_0
 spring.jpa.hibernate.ddl-auto=none
