--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,8 @@
-spring.datasource.drive-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+# Configuracao do banco de dados H2
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.jpa.show-sql=false
-spring.h2.console.path=/api/h2-console
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
