--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # Define a porta do servidor
 server.port=8080
 
-# Define o perfil ativo da aplica??o
-spring.profiles.active=test
+# Define o perfil ativo da aplicacao
+spring.profiles.active=${APP_PROFILE}
 
-#Configura?oes do JWT
+#Configuracoes do JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 jwt.expiration-recovery=${JWT_EXPIRATION_RECOVERY}
-jwt.issuerUri=http://localhost:8080
+jwt.issuerUri=https://api-erp.us-east-1.awsapprunner.com
 
-# Open Api - Swagger
+# Open Api Swagger
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.enable=true
@@ -19,7 +19,7 @@ springdoc.api-docs.version=OPENAPI_3_0
 spring.jpa.hibernate.ddl-auto=none
 server.forward-headers-strategy=framework
 
-# Configura??es servi?o de e-mail
+# Configuracoes de e-mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USER}
