Revert "test deploy AWS-Runner"
This reverts commit dc69d3dfbd33b67bcd1397797c755d809b9701f7.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     container_name: api-erp
     ports:
       - "8080:8080"    # Mapeia a porta 8080 do container para a porta 8080 da instância
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/bd_dev
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
     depends_on:
       - db               # Garante que o banco de dados suba primeiro
     networks:
