--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,11 @@
-# Configuracao do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_dev?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://34.227.59.55:3306/bd_dev?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=user
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl_auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#jwt.issuerUri=http://34.227.59.55:8080
