--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
-#spring.datasource.url=jdbc:mysql://34.227.59.55:3306/bd_dev?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=user
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-#spring.jpa.hibernate.ddl_auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#jwt.issuerUri=http://34.227.59.55:8080
+spring.datasource.url=jdbc:mysql://34.227.59.55:3306/bd_dev?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl_auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+jwt.issuerUri=http://54.90.147.75:8080
