--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # Define o perfil ativo da aplica??o
-spring.profiles.active=test
+spring.profiles.active=dev
 
 #Configura?oes do JWT
 jwt.secret=${JWT_SECRET}
